# final-year-project

./: .gitignore
CrazySim/: README.md  fileStructure.txt  launch_gazebo.sh
CrazySim/CoverageSim/: LAB.py  LAB_Demo.py  Show_Stratagy.py  Training_Components.py  Training_Implementation.py  Training_data.json  idqn_best_strategy.json  launch_gazebo.sh
CrazySim/CustomSetupFiles/: sitl_multiagent_text.sh
CrazySim/CustomSetupFiles/config/: config.rviz  crazyflies.yaml  motion_capture.yaml
CrazySim/Developement/: Reset_UAVs.py  Training_Components copy.py  Training_Implementation copy.py  Training_data.json
CrazySim/Developement/Basic_Elements/: JSONOutput_Implementation.json  JSONOutput_Implementation.py  OpenAndCloseGazebo_Implementation.py  Reward_Implementation.py  (+1 more)
CrazySim/Lab_implementation/: Lab.py  Lab_components.py  codeTest.py
CrazySim/cache/: 1E0CD7F8.json  584F5D8A.json
CrazySim/ros2_ws/src/coverage_sim/: package.xml  setup.cfg  setup.py
CrazySim/ros2_ws/src/coverage_sim/coverage_sim/: Training_Components.py  Training_Implementation.py  Training_data.json
MARL_Implementation/: gridWorldCreator.py
MARL_Implementation/CompareResults/: Fast_rewards.txt  Normal_rewards.txt  compareResults.py  rewards_qmix.txt  rewards_qtran.txt  rewards_vdn.txt
MARL_Implementation/HyperParam_Explore/: epsilon.py
MARL_Implementation/actor-critic/: GlobalActorCritic.py  Networks.py  environment.py  grid_world_test.json  grid_world_test2.json  main.py  main2.py  main_nav.py  nav_main.py  note.ipynb  pseudocode.txt  requirements.txt  shared_adam.py  test.py
(+891 files in other folders)
